# federated-route-finding

./: .gitignore  AGENTS.md  Makefile  README.md  environment.yml  pyproject.toml
_docs/: README.md
_docs/history/: 2026-05-04.md
configs/: README.md  class_route_map.yaml  classes.yaml  clients.yaml  federated.yaml  graph.yaml  train.yaml
data/: README.md
data/raw/: README.md
data/route_clips/: README.md
data/source_videos/: README.md
docs/: ARCHITECTURE.md  DATA_COLLECTION_GUIDE.md  LABELS.md  TEAM_WORKFLOW.md
outputs/: README.md
scripts/: README.md  evaluate_global.py  extract_frames.py  launch_demo.py  launch_simple_demo.py  merge_checkpoints.py  predict_route.py  prepare_dataset.py  train_local.py
src/pangpang_pathfinder/: README.md  __init__.py  config.py  constants.py
src/pangpang_pathfinder/app/: gradio_app.py
src/pangpang_pathfinder/data/: dataset.py  manifest.py
src/pangpang_pathfinder/engine/: evaluate.py
src/pangpang_pathfinder/fl/: flower_stub.py  merge.py
src/pangpang_pathfinder/models/: factory.py
src/pangpang_pathfinder/route/: graph.py  planner.py  stitching.py
src/pangpang_pathfinder/utils/: paths.py
src/pathfinder/: README.md  config.py  inference.py
src/pathfinder/app/: gradio_app.py  simple_demo.py
src/pathfinder/data/: manifest.py  transforms.py
tests/: README.md  test_config.py  test_graph.py  test_model_forward.py  test_stitching.py
utils/: README.md  app.py  requirements.txt
utils/core/: __init__.py  classifier.py  graph.py  stitcher.py
utils/ui/: __init__.py  pipeline.py  scene_a.py  scene_b.py
(+8 files in other folders)
